--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# TODO Why IDEA iml file in the git repository?
+# TODO Why IDEA iml file in the git repository?     fixed
 **/.idea
 *.iml
 **/target
