--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,36 @@
                 <suite.xml>src/test/resources/hw1MultAndDivTests.xml</suite.xml>
             </properties>
         </profile>
+
+        <profile>
+            <id>hw2-tests</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <suite.xml>src/test/resources/hw2tests.xml</suite.xml>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>hw2-ex1</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <suite.xml>src/test/resources/hw2Ex1Tests.xml</suite.xml>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>hw2-ex2</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <suite.xml>src/test/resources/hw2Ex2Tests.xml</suite.xml>
+            </properties>
+        </profile>
     </profiles>
 
     <dependencies>
