--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
             <version>3.6.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>5.2.4</version>
+        </dependency>
     </dependencies>
 
     <build>
